--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 Udemy/TfDevCert_ZTM_mrDbourke
+AnacondaPkgs.html
+AnacondaPkgs_files/index.css
+AnacondaPkgs_files/main.41f9b7df497f4cf61550.js.download
+AnacondaPkgs_files/MathJax.js.download
+YouTube/Machine-Learning-Collection/
