--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ AnacondaPkgs_files/index.css
 AnacondaPkgs_files/main.41f9b7df497f4cf61550.js.download
 AnacondaPkgs_files/MathJax.js.download
 YouTube/Machine-Learning-Collection/
+Udemy/DL_AZ_Hands_on_ANN_Hadelin/
